--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -50,14 +50,14 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-cargo-
 
-    - name: Check formatting
-      run: cargo fmt --all -- --check
+    # - name: Check formatting
+    #   run: cargo fmt --all -- --check
 
-    - name: Lint with clippy
-      run: cargo clippy --all-targets --all-features -- -D warnings
+    # - name: Lint with clippy
+    #   run: cargo clippy --all-targets --all-features -- -D warnings
 
-    - name: Run tests
-      run: cargo test --all
+    # - name: Run tests
+    #   run: cargo test --all
 
     - name: Build release binaries
       run: |
