--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -5,8 +5,10 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
-  release:
-    types: [published]
+  workflow_dispatch:
+
+permissions:
+  contents: read
 
 env:
   CARGO_TERM_COLOR: always
@@ -25,11 +27,8 @@ jobs:
         sudo apt-get install -y libpcap-dev pkg-config
 
     - name: Install Rust
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: stable
-        profile: minimal
-        override: true
         components: rustfmt, clippy
 
     - name: Cache cargo registry
@@ -43,14 +42,14 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-cargo-
 
-    # - name: Check formatting
-    #   run: cargo fmt --all -- --check
+    - name: Check formatting
+      run: cargo fmt --all -- --check
 
-    # - name: Lint with clippy
-    #   run: cargo clippy --all-targets --all-features -- -D warnings
+    - name: Lint with clippy
+      run: cargo clippy --all-targets --all-features -- -D warnings
 
-    # - name: Run tests
-    #   run: cargo test --all
+    - name: Run tests
+      run: cargo test --all
 
     - name: Build release binaries
       run: |
@@ -58,40 +57,10 @@ jobs:
         strip target/release/hakinet
         strip target/release/hakinet-scan
 
-    - name: Create release archive
-      if: github.event_name == 'release'
-      run: |
-        mkdir -p release-artifacts
-        tar -czf release-artifacts/hakinet-linux-x86_64.tar.gz \
-          -C target/release hakinet hakinet-scan \
-          -C ../../ README.md LICENSE 2>/dev/null || \
-          tar -czf release-artifacts/hakinet-linux-x86_64.tar.gz \
-          -C target/release hakinet hakinet-scan \
-          -C ../../ README.md
-
-    - name: Upload release artifacts
-      if: github.event_name == 'release'
+    - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: hakinet-linux-x86_64
-        path: release-artifacts/
-
-    - name: Upload release asset
-      if: github.event_name == 'release'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./release-artifacts/hakinet-linux-x86_64.tar.gz
-        asset_name: hakinet-linux-x86_64.tar.gz
-        asset_content_type: application/gzip
-
-    - name: Upload build artifacts (non-release)
-      if: github.event_name != 'release'
-      uses: actions/upload-artifact@v4
-      with:
-        name: hakinet-linux-debug
         path: |
           target/release/hakinet
           target/release/hakinet-scan
