--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,8 +5,9 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
-  release:
-    types: [published]
+
+permissions:
+  contents: read
 
 env:
   CARGO_TERM_COLOR: always
@@ -25,11 +26,8 @@ jobs:
         sudo apt-get install -y libpcap-dev pkg-config
 
     - name: Install Rust
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: stable
-        profile: minimal
-        override: true
         components: rustfmt, clippy
 
     - name: Cache cargo
@@ -41,14 +39,14 @@ jobs:
           target
         key: ${{ runner.os }}-cargo-test-${{ hashFiles('**/Cargo.lock') }}
 
-    # - name: Check formatting
-    #   run: cargo fmt --all -- --check
+    - name: Check formatting
+      run: cargo fmt --all -- --check
 
-    # - name: Lint with clippy
-    #   run: cargo clippy --all-targets --all-features -- -D warnings
+    - name: Lint with clippy
+      run: cargo clippy --all-targets --all-features -- -D warnings
 
-    # - name: Run tests
-    #   run: cargo test --all
+    - name: Run tests
+      run: cargo test --all
 
   build:
     name: Build ${{ matrix.target }}
@@ -61,11 +59,9 @@ jobs:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
             name: hakinet-linux-x86_64
-            archive: tar.gz
           - target: x86_64-pc-windows-msvc
             os: windows-latest
             name: hakinet-windows-x86_64
-            archive: zip
 
     steps:
     - name: Checkout code
@@ -91,12 +87,9 @@ jobs:
         echo "LIBPCAP_INCLUDEDIR=C:\WpdPack\Include" >> $env:GITHUB_ENV
 
     - name: Install Rust
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: stable
-        profile: minimal
-        override: true
-        target: ${{ matrix.target }}
+        targets: ${{ matrix.target }}
 
     - name: Cache cargo
       uses: actions/cache@v4
@@ -116,103 +109,10 @@ jobs:
         strip target/${{ matrix.target }}/release/hakinet
         strip target/${{ matrix.target }}/release/hakinet-scan
 
-    - name: Create release archive (Linux)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        mkdir -p release-artifacts
-        cd target/${{ matrix.target }}/release
-        tar -czf ../../../release-artifacts/${{ matrix.name }}.${{ matrix.archive }} \
-          hakinet hakinet-scan
-        cd ../../..
-        tar -rf release-artifacts/${{ matrix.name }}.${{ matrix.archive }} README.md 2>/dev/null || true
-
-    - name: Create release archive (Windows)
-      if: matrix.os == 'windows-latest'
-      shell: pwsh
-      run: |
-        New-Item -ItemType Directory -Force -Path release-artifacts
-
-        $sourcePath = "target\${{ matrix.target }}\release\"
-        Copy-Item "${sourcePath}hakinet.exe" "release-artifacts\"
-        Copy-Item "${sourcePath}hakinet-scan.exe" "release-artifacts\"
-        Copy-Item "README.md" "release-artifacts\" -ErrorAction SilentlyContinue
-
-        Compress-Archive -Path "release-artifacts\*" -DestinationPath "release-artifacts\${{ matrix.name }}.${{ matrix.archive }}"
-
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.name }}
-        path: release-artifacts/${{ matrix.name }}.${{ matrix.archive }}
+        path: |
+          target/${{ matrix.target }}/release/hakinet*
         retention-days: 7
-
-    - name: Upload release asset
-      if: github.event_name == 'release'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./release-artifacts/${{ matrix.name }}.${{ matrix.archive }}
-        asset_name: ${{ matrix.name }}.${{ matrix.archive }}
-        asset_content_type: ${{ matrix.archive == 'zip' && 'application/zip' || 'application/gzip' }}
-
-  release-info:
-    name: Generate Release Info
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.event_name == 'release'
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Generate release notes
-      run: |
-        cat > release_notes.md << 'EOF'
-        ## 🐱 Hakinet Network Tools Suite - Release ${{ github.event.release.tag_name }}
-
-        ### What's New
-        - Latest build of hakinet packet capture tool
-        - Latest build of hakinet-scan network scanner
-        - Cross-platform support for Linux and Windows
-
-        ### Downloads
-        - **Linux (x86_64)**: `hakinet-linux-x86_64.tar.gz`
-        - **Windows (x86_64)**: `hakinet-windows-x86_64.zip`
-
-        ### Installation
-
-        #### Linux
-        ```bash
-        tar -xzf hakinet-linux-x86_64.tar.gz
-        sudo cp hakinet hakinet-scan /usr/local/bin/
-        ```
-
-        #### Windows
-        1. Extract `hakinet-windows-x86_64.zip`
-        2. Add the extracted folder to your PATH
-        3. Install WinPcap or Npcap for packet capture functionality
-
-        ### Usage
-        ```bash
-        # Packet capture
-        sudo hakinet capture --help
-
-        # Network scanning
-        hakinet-scan scan --help
-        ```
-
-        ---
-        ```
-           /\_/\
-          ( ^.^ ) "Thanks for using Hakinet! Remember to use these tools responsibly, meow!"
-           > ^ <
-        ```
-        EOF
-
-    - name: Upload release notes
-      uses: actions/upload-artifact@v4
-      with:
-        name: release-notes
-        path: release_notes.md
