--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+permissions:
+  contents: write
+
 jobs:
   create-release:
     name: Create Release
@@ -26,12 +29,10 @@ jobs:
 
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.ref }}
-        release_name: Hakinet ${{ steps.get_version.outputs.VERSION }}
+        name: Hakinet ${{ steps.get_version.outputs.VERSION }}
         body: |
           ## 🐱 Hakinet Network Tools Suite - ${{ steps.get_version.outputs.VERSION }}
 
@@ -87,10 +88,9 @@ jobs:
         draft: false
         prerelease: false
 
-  build-release:
-    name: Build Release ${{ matrix.target }}
+  build-and-release:
+    name: Build and Release ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
-    needs: create-release
     strategy:
       fail-fast: false
       matrix:
@@ -125,12 +125,9 @@ jobs:
         echo "LIBPCAP_INCLUDEDIR=C:\WpdPack\Include" >> $env:GITHUB_ENV
 
     - name: Install Rust
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: stable
-        profile: minimal
-        override: true
-        target: ${{ matrix.target }}
+        targets: ${{ matrix.target }}
 
     - name: Cache cargo
       uses: actions/cache@v4
@@ -225,12 +222,67 @@ jobs:
 
         Compress-Archive -Path "package\*" -DestinationPath "${{ matrix.name }}.${{ matrix.archive }}"
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Get version from tag
+      id: get_version
+      shell: bash
+      run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+    - name: Release
+      uses: softprops/action-gh-release@v2
       with:
-        upload_url: ${{ needs.create-release.outputs.upload_url }}
-        asset_path: ./${{ matrix.name }}.${{ matrix.archive }}
-        asset_name: ${{ matrix.name }}.${{ matrix.archive }}
-        asset_content_type: ${{ matrix.archive == 'zip' && 'application/zip' || 'application/gzip' }}
+        files: ${{ matrix.name }}.${{ matrix.archive }}
+        name: Hakinet ${{ steps.get_version.outputs.VERSION }}
+        body: |
+          ## 🐱 Hakinet Network Tools Suite - ${{ steps.get_version.outputs.VERSION }}
+
+          A comprehensive network toolkit with cute cat mascots!
+
+          ### 📦 Downloads
+          - **Linux (x86_64)**: hakinet-linux-x86_64.tar.gz
+          - **Windows (x86_64)**: hakinet-windows-x86_64.zip
+
+          ### 🚀 Tools Included
+          - **🔍 hakinet** - Network packet capture tool (like tcpdump/Wireshark)
+          - **🎯 hakinet-scan** - Network scanning tool (like nmap)
+
+          ### 📋 Installation
+
+          #### Linux
+          ```bash
+          tar -xzf hakinet-linux-x86_64.tar.gz
+          sudo cp hakinet hakinet-scan /usr/local/bin/
+          sudo setcap cap_net_raw,cap_net_admin=eip /usr/local/bin/hakinet
+          sudo setcap cap_net_raw,cap_net_admin=eip /usr/local/bin/hakinet-scan
+          ```
+
+          #### Windows
+          1. Extract hakinet-windows-x86_64.zip
+          2. Install [Npcap](https://nmap.org/npcap/) for packet capture functionality
+          3. Run tools as Administrator
+
+          ### 🔧 Quick Start
+          ```bash
+          # List network interfaces
+          hakinet interfaces
+
+          # Start packet capture
+          sudo hakinet capture
+
+          # Scan local network
+          hakinet-scan discovery 192.168.1.0/24
+
+          # Port scan
+          hakinet-scan scan example.com
+          ```
+
+          ### ⚠️ Important
+          Please ensure you have permission to scan target networks and comply with all applicable laws and regulations.
+
+          ---
+          ```
+             /\_/\
+            ( ^.^ ) "Thanks for using Hakinet! Meow!"
+             > ^ <
+          ```
+        draft: false
+        prerelease: false
