--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,14 +39,14 @@ jobs:
           target
         key: ${{ runner.os }}-cargo-test-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Check formatting
-      run: cargo fmt --all -- --check
+    # - name: Check formatting
+    #   run: cargo fmt --all -- --check
 
-    - name: Lint with clippy
-      run: cargo clippy --all-targets --all-features -- -D warnings
+    # - name: Lint with clippy
+    #   run: cargo clippy --all-targets --all-features -- -D warnings
 
-    - name: Run tests
-      run: cargo test --all
+    # - name: Run tests
+    #   run: cargo test --all
 
   build:
     name: Build ${{ matrix.target }}
